<resources>
    <string name="app_name">DigiMart</string>
    <string name="digi_mart_name">Digi Mart</string>
    <string name="enter_email_user">Sign-in with  Email</string>
    <string name="enter_password_hint">Please Enter Your Password</string>
    <string name="create_account">Not a Member yet? Sign Up here.</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_username">Invalid UserName</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="enter_email_hint_signup">Please Enter Email Address</string>
    <string name="create_password_hint">Create a Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="enter_phone_no_hint">Enter Your Phone Number</string>
    <string name="create_username_hint">Create Username</string>
    <string name="have_account">Already Have an Account? SignIn</string>

    <string name="username_incorrect">Username must not contain any space, must have letters and numbers</string>


    <string name="error_msg_invalid_email">Email pattern not accurate</string>
    <string name="error_msg_invalid_username">Username must have letters and numbers only, 10–15 characters</string>
    <string name="error_msg_invalid_password_created">Password must contain 8 letters; at least 1 capital letter, 1 special character, and 1 number</string>
    <string name="error_msg_invalid_password_matching">Password not matched</string>
    <string name="error_msg_invalid_phoneNo">Invalid phone number. Format: +92XXXXXXXXXX</string>
    <string name="enter_phone_number_with_area_code">Enter Phone Number with Area Code</string>
    <string name="e_g_abc123xyz">E.g: abc123xyz</string>
    <string name="required_field">Required Field</string>
    <string name="user_with_this_email_already_exists">User with this email or username already exists \n Please Sign-In Or use new user details</string>
    <string name="database_error_or_network_error">Database error OR Network error</string>
    <string name="account_successfully_created">Congratulation, account has been successfully created!</string>
    <string name="user_already_exists">User Already Exists</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="image_view">Image View</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_email_txt">Please verify your email</string>

    <string name="yes">Yes</string>
    <string name="sure_to_exit">Are you sure to exit?</string>
    <string name="username_already_used">Username Already Used</string>
    <string name="remember_me">Remember Me</string>
    <string name="cart_loading_animation">Cart loading animation</string>
    <string name="please_wait_data_is_being_loaded">Please wait data is being loaded</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="signup_with_google">Signup with Google</string>
    <string name="invalid_domain">Invalid Domain</string>
    <string name="logout">Logout</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="i_am_admin">I am Admin</string>
    <string name="recover">Recover</string>
    <string name="recover_password">Recover Password</string>
    <string name="i_am_a_user">I am a User</string>
    <string name="login_as_admin">Login as Admin</string>


</resources>