<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SigninFragment"
    android:background="@drawable/gradient_splash_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/digimart_name"
            android:layout_width="0dp"
            android:layout_height="258dp"
            android:contentDescription="@string/digi_mart_name"
            android:src="@drawable/name_digimart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"

            android:hint="@string/enter_email_user"
            android:textColorHint="@color/light_purple"

            app:boxStrokeErrorColor="@color/red"

            app:errorEnabled="true"
            app:errorIconTint="@color/orange"
            app:errorTextColor="@color/orange"

            app:helperText=""
            app:helperTextEnabled="true"

            app:helperTextTextColor="@color/light_gray"
            app:hintEnabled="true"

            app:layout_constraintBottom_toTopOf="@+id/enterPhoneNoInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/enterPhoneNoInputLayout"
            app:layout_constraintStart_toStartOf="@+id/enterPhoneNoInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/digimart_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_email_user_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="#6A5F465E"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/black"
                android:textColor="@color/light_purple"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/digimart_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPhoneNoInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"

            app:hintEnabled="true"
            android:hint="@string/enter_password_hint"
            android:textColorHint="@color/light_purple"

            app:boxStrokeErrorColor="@color/red"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/light_purple"
            app:errorEnabled="true"
            app:errorIconTint="@color/orange"
            app:errorTextColor="@color/orange"
            app:helperText=""

            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/light_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/digimart_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_password_input_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#6A5F465E"
                android:inputType="textPassword"
                android:shadowColor="@color/black"
                android:textColor="@color/light_purple"
                android:padding="20dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/digimart_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/signin"
            android:textSize="16sp"
            app:backgroundTint="@color/dark_dirty_violet"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterPhoneNoInputLayout" />

        <TextView
            android:id="@+id/create_account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/light_purple"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_btn" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>